--- a/Calculadora.css
+++ b/Calculadora.css
@@ -424,3 +424,18 @@ letter-spacing: 0px;
     margin-top: -15px;
   }
 }
+@media screen and (max-width:360px){
+  .tema{
+    margin-top: 25px;
+  }
+  .calc{
+    margin-top:15px;
+  }
+  .container2{
+width: 340px;
+height: 500px;
+  }
+  .display{
+    width: 340px;
+  }
+}
