--- a/Calculadora.css
+++ b/Calculadora.css
@@ -1,11 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-
-
 * {
   box-sizing: border-box;
   outline: 0;
 }
-
 body {
   margin: 0;
   padding: 0;
@@ -14,34 +11,33 @@ body {
   line-height: 1.5em;
 transition: all 1s;
 }
-
 .container2 {
   max-width: 380px;
   background-color: #252d44;
   padding: 20px;
   border-radius: 10px;
   margin-top: 10px;
-  margin-left: 700px;
+ display: flex;
+ justify-content: center;
 }
-
+.container-table{
+  display: flex;
+  justify-content: center;
+}
 .calculadora {
   width: 370px;
   margin-left: -15px;
 border-radius: 20px;
-
-
 }
 .calculadora tr td button{
   border-radius: 11px;
   color: #3f4c5c;
   font-size: 20px;
-  
 }
 .display {
   font-size: 2em;
   width: 377px;
   text-align: right;
-  margin-left: 700px;
   margin-top:10px;
   height: 100px;
   border-radius:10px;
@@ -60,18 +56,22 @@ border-radius: 20px;
   border-radius: 20px;
   color: #4c505c;
 }
-
+.container-display{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+ 
+}
 .btn:hover {
   background-color: #9e9e9e;
 }
-
 .pai {
   width: 100px;
   background-color: #252c46;
   height: 30px;
-  margin-top: 10px;
-  margin-left: -200px;
   border-radius: 15px;
+  margin-left: 70px;
+  margin-top: -25px;
 }
 
 .filho {
@@ -83,402 +83,76 @@ border-radius: 20px;
   margin-left: 10px;
   transition: all 1s;
   float: left;
-
 }
-
 span {
-  margin-left: -200px;
   letter-spacing: 9px;
   font-size: 20px;
-  display: inline-block;
- 
+  margin-top: -70px;
+  margin-left:40%;
+  display: block;
 }
 
 span button {
-  background-color: #3b4664;
   border: 0px;
   cursor: pointer;
   color: white;
-
-
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 .bg{
-  margin-top: 100px;
+  margin-top: 200px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+.text-container{
+  width: 380px;
+  height: 50px;
+  margin-top: -20px;
+display: flex;
 }
 .calc{
   color: white;
-  margin-left: 300px;
-  margin-top: 35px;
   font-size: 25px;
-  
+  flex: 1;
 }
-
 .tema{
   color: white;
-  margin-top:45px;
-  margin-left:-90px;
+  margin-top:10px;
+  flex: 1;
 }
-
-@media screen and (max-width:1440px) {
-.calc{
-  margin-left: 370px;
+@media screen and (max-width:1400px) and (max-height:600px) {
+ .bg{
+   margin-top: 50px;
+ } 
 }
-.pai{
-  margin-left: -110px;
-}
-.tema{
-  margin-left:10px;
-}
-span{
-  margin-left:-110px;
-
-}
-.display{
-  margin-left: 37%;
-}
-.container2{
-  margin-left: 37%;
-}
-}
-
-@media screen and (max-width:1280px) {
-.container2{
-  margin-left: 35%;
-
-}
-.display{
-  margin-left: 35%;
-
-}
-.calc{
-  margin-left: 370px;
-}
-.pai{
-  margin-left: -120px;
-}
-span{
-  margin-left: -120px;
-}
-.tema{
-  margin-left: 0px;
-}
-}
-@media screen and (max-width:1180px){
-.calc{
-  margin-left: 290px;
-}
-.tema{
-margin-left: 10px;
-}
-.pai{
-  margin-left: -80px;
-}
-span{
-  margin-left: -80px;
-}
-}
-@media screen and (max-width:1024px){
-.pai{
-  margin-left: -105px;
-}
-.calc{
-  margin-left: 260px;
-}
-span {
-  margin-left: -100px;
-}
-.tema{
-  margin-left: -20px;
-}
-.bg{
-  margin-top: 10px;
-}
-.container2{
-  margin-left: 30%;
-}
-.display{
-  margin-left: 30%;
-}
-}
-@media screen and (max-width:915px){
-  .calc{
-    margin-left: 170px;
-  }
-  .pai{
-    margin-left: -50px;
-  }
-  span{
-    margin-left: -50px;
-  }
-  .tema{
-    margin-left: 10px;
-  }
-}
-
-@media screen and (max-width:912px){
-  .calc{
-    margin-left: 160px;
-  }
-  .tema{
-    margin-left: 0px;
-  }
-  .pai{
-    margin-left: -55px;
-  }
-  span{
-    margin-left: -55px;
-  }
-  .container2{
-    margin-left: 29%;
-  }
-  .display{
-    margin-left: 29%;
-  }
-}
-@media screen and (max-width:820px){
-.calc{
-  margin-left: 160px;
-}
-.pai{
-  margin-left: -50px;
-}
-span{
-  margin-left: -50px;
-}
-.container2{
-  margin-left: 27%;
-}
-.display{
-  margin-left: 27%;
-}
-}
-@media screen and (max-width:768px){
-  .calc{
-    margin-left: 170px;
-  }
-}
-@media screen and (max-width:720px){
-  .container2{
-    margin-left: 23%;
-  }
-  .display{
-    margin-left: 23%;
-  }
-  .calc{
-    margin-left: 70px;
-  }
-  .pai{
-    margin-left: -25px;
-  }
-  span{
-    margin-left: -25px;
-  }
-}
-@media screen and (max-width:540px){
-  .container2{
-    margin-left: 15%;
-  }
-  .display{
-    margin-left: 15%;
-  }
-  .calc{
-    margin-left: 70px;
-  }
-  .pai{
-    margin-left: -20px;
-  }
-  span{
-    margin-left: -20px;
-  }
-}
-@media screen and (max-width:425px) {
-.display{
-  margin-left:25px;
-}
-.container2{
-  margin-left: 25px;
-}
-.calc{
-  margin-left: 10px;
-}
-.tema{
-  margin-left: -10px;
-}
-.pai{
-  margin-left: 0px;
-}
-span{
-  margin-left: 0;
-}
-}
-@media screen and (max-width:414px){
-  .display{
-    margin-left: 4%;
-  }
-  .container2{
-    margin-left: 4%;
-    margin-top: 40px;
-    height: 450px;
-  }
-  .calculadora button{
-    height: 70px;
-  }
-  .calculadora td{
-    max-width: 10px;
-  }
-  .calc{
-    margin-left: 10px;
-  }
-  .pai{
-    margin-left: -5px;
-  }
-  span{
-    margin-left: -5px;
-  }
-}
-@media screen and (max-width:412px){
-  .container2{
-    margin-left: 4%;
-    margin-top: 30px;
-    height: 500px;
-  }
-  .display{
-    margin-left: 4%;
-    margin-top: 30px;
-  }
-  .calc{
-    margin-left: 10px;
-    font-size: 30px;
-  }
-  .pai{
-    margin-left: -5px;
-    margin-top: 15px;
-  }
-  span{
-    margin-left: -5px;
-  }
-  span button{
-    margin-left: 1px;
-  }
-  .calculadora button{
-height: 75px;
-  }
-  .tema{
-    font-size:19px;
-    margin-left: -20px;
-  }
-}
-@media screen and (max-width:393px){
-  .display{
-    margin-left: 2%;
-  }
-  .container2{
-    margin-left: 2%;
-    margin-top: 40px;
-  }
-}
-@media screen and (max-width:360px){
-  .display{
-    width: 350px;
-    margin-left: 1%;
-    margin-top: 5px;
-  }
-  .container2{
-    width: 350px;
-    height: 490px;
-  }
-  .calculadora td{
-    max-width: 5px;
-  
-  }
-  .calculadora button{
-    max-width: 70px;
-  }
+@media screen and (max-width:400px) {
   .calculadora{
-    width: 330px;
+    height: 400px;
+    width: 280px;
+  }
+  .display{
+    width: 305px;
+  }
+  .bg{
+    margin-top: 100px;
+  }
+  .btn22{
+    height: 65px;
+    width: 120%;
   }
   #Reset{
-max-width: 150px;
+    width: 120%;
+ 
   }
   #equal{
-    max-width: 150px;
+    width: 100%;
+    margin-left: 15px;
   }
-  .calc{
-    margin-top: 45px;
-  }
-  .tema{
-    margin-top: 55px;
-  }
-  span {
-letter-spacing: 0px;
-  }
-  .pai{
-    width: 85px;
-    margin-top: 25px;
-  }
-}
-@media screen and (max-width:375px){
-  .display{
-    width: 350px;
-    margin-left: 12px;
-    margin-top:10px;
-  }
-  .container2{
-    width: 350px;
-    margin-top: 30px;
-    margin: 12px;
-  }
-  .calculadora button{
-    width: 70px;
-  }
-  .calculadora td{
-    max-width: 5px;
-   padding-right:65px;
-    
-  }
-  .calculadora{
-    width: 300px;
-    border-spacing: 11px;
-    border-collapse: separate;
-    margin-left: -30px;
-    margin-top: -20px;
-  }
-  .calc{
-    margin-top: 0px;
-  }
-  .tema{
-    margin-top: 10px;
-    margin-left: -30px;
-  }
-  .pai{
-    margin-top: 0px ;
-  }
-  span{
-    letter-spacing: 2px;
-    margin-top: -5px;
-  }
-  #Reset{
-    width: 150px;
-    margin-top: -15px;
-
-  }
-  #equal{
-    width: 150px;
-    margin-top: -15px;
-  }
-}
-@media screen and (max-width:360px){
-  .tema{
-    margin-top: 25px;
-  }
-  .calc{
-    margin-top:15px;
-  }
-  .container2{
-width: 340px;
-height: 500px;
-  }
-  .display{
-    width: 340px;
+  .bg{
+  width: 80%;
+  margin-left: 10%;
   }
 }
